--- a/frontend/src/scenes/Signup/Signup.scss
+++ b/frontend/src/scenes/Signup/Signup.scss
@@ -48,3 +48,47 @@
     transition: all 0.2s ease-in;
   }
 }
+
+ul {
+  position: relative;
+  left: 50%;
+  transform: translateX(-25%);
+  color: #444;
+
+  li {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+
+    &.valid {
+      color: rgb(19, 170, 82);
+    }
+  }
+}
+
+input[type="submit"] {
+  font-size: 1rem;
+  cursor: pointer;
+  height: 38px;
+  width: 100%;
+  background-color: transparent;
+  background-image: linear-gradient(
+    -180deg,
+    rgba(255, 255, 255, 0.09) 0%,
+    rgba(17, 17, 17, 0.04) 100%
+  );
+  border: 1px solid rgba(22, 22, 22, 0.2);
+  color: #444;
+
+  &:hover {
+    background-image: linear-gradient(
+      -180deg,
+      rgba(255, 255, 255, 0.18) 0%,
+      rgba(17, 17, 17, 0.08) 100%
+    );
+    color: #111;
+  }
+}
+
+.error {
+  height: 38px;
+}
